fix(VListItemTitle): adjust line-height to fix overflow cutoff

--- a/packages/vuetify/src/components/VList/VListItem.sass
+++ b/packages/vuetify/src/components/VList/VListItem.sass
@@ -121,6 +121,7 @@
 .v-list-item__title
   align-self: center
   font-size: $list-item-title-font-size
+  line-height: 1.4rem
 
 .v-list-item__subtitle
   font-size: $list-item-subtitle-font-size
